# interpolation-methods

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bootstrap.sh  docker-compose.yml  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/: run_interpolation_methods.py  run_interpolation_methods.sh
src/methods/: interpolate_methods.py
