[metadata]
name = interpolation_methods
description = Interpolation methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/corinat/quarticle
author = ""
author_email = ""
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
zip_safe = False

[options]
packages = find:
install_requires =
    fiona~=1.10.1
    geopandas~=1.0.1
    rasterio~=1.4.3
    shapely~=2.0.7
    typer[all]~=0.4.0
python_requires = >=3.8
include_package_data = True
use_scm_version = True

[aliases]
release = sdist bdist_wheel

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
max-complexity = 10
